# interesting-code

./: .gitignore  README.md  flake.nix  hie.yaml  interesting-code.cabal
src/: OneOfN.hs  OneOfNGADTS.hs  Test.hs  TypeConstraints.hs  Utils.hs  VOneOfN.hs
src/OneOfN/: OneOfN.hs  TH.hs
