cabal-version:   2.4
name:            interesting-code
version:         0
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
description:     Some code I might use later
author:          José María Landa Chávez
maintainer:      José María Landa Chávez - josemaria.landa@gmail.com
copyright:       2023-04-01 José María Landa Chávez
build-type:      Simple
extra-doc-files: 
  README.md
license:         Unlicense
license-file:    LICENSE
  
common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      TypeOperators,
                      TypeApplications,
                      DeriveGeneric,
                      DeriveAnyClass,
                      RankNTypes,
                      KindSignatures,
                      StandaloneKindSignatures,
                      PolyKinds,
                      TypeFamilies,
                      InstanceSigs
  ghc-options:

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Test
                   Utils,
                   OneOfN,
                   OneOfNGADTS
  other-modules:   
  build-depends:   first-class-families,
                   template-haskell,
                   text